# aks-chaos-lab

./: .dockerignore  .gitignore  .mcp.json  Makefile  README.md  azure.yaml  pyproject.toml  this.code-workspace
.github/: actionlint.yaml  copilot-instructions.md
.github/agents/: agentic-workflows.agent.md  design-snapshot.agent.md  manage-adr.agent.md  resume.agent.md  review-repo.agent.md  wrap-up.agent.md
.github/aw/: actions-lock.json
.github/hooks/: hooks.json
.github/hooks/scripts/: post-edit-quality-feedback.py  session-end.sh  session-start.sh
.github/skills/aks-maintenance-checker/: SKILL.md
.github/skills/bicep-api-version-updater/: SKILL.md
.github/skills/bicep-what-if-analysis/: SKILL.md
.github/workflows/: aks-updates-analyzer.lock.yml  aks-updates-analyzer.md  ci.yml  copilot-setup-steps.yml  integration-test.yml
.specify/memory/: constitution.md
docs/: api.md  chaos-experiments.md  deployment.md  design.md  feature-context-guide.md  observability.md  requirements.md  workarounds.md
docs/adr/: 001-gateway-api-migration-and-app-level-metrics.md  002-container-network-logs.md  003-container-insights-custom-preset.md  004-envoy-gateway-metrics-for-slo.md  005-aks-diagnostics-basic-logs.md  006-otlp-vendor-neutral-otel.md  007-acns-l7-observability.md  008-node-os-ubuntu2404.md  009-azure-monitor-sli-and-prometheus-slo.md  010-aks-automatic-unsupported-due-to-deployment-safeguards.md  011-external-availability-sli-publisher.md  012-functions-direct-external-sli-probe.md  013-histogram-bucket-latency-sli.md  013-uv-workspace-unified-tooling.md  014-histogram-bucket-latency-sli.md  015-resource-token-suffix-naming.md  016-azure-chaos-studio-workspace-adoption.md  INDEX.md  README.md
docs/features/: gateway-api-migration.md
docs/history/analysis/: 20250919-aks-base-fleet.md  20250919-fleet-approval-alert.md  20250919-fleet-dual-autoupgrade.md
docs/history/design/: 20250919-aks-base-fleet.md  20250919-fleet-approval-alert.md  20250919-fleet-dual-autoupgrade.md
docs/history/implementation/: 20250919-aks-base-fleet.md  20250919-fleet-approval-alert.md  20250919-fleet-dual-autoupgrade.md
docs/history/reflection/: 20250919-aks-base-fleet.md  20250919-fleet-approval-alert.md  20250919-fleet-dual-autoupgrade.md
docs/history/validation/: 20250919-aks-base-fleet.md  20250919-fleet-approval-alert.md  20250919-fleet-dual-autoupgrade.md
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/helm/: chaos-mesh-values.yaml
infra/modules/: acr.bicep  aks.bicep  alert-rg-role-assignments.bicep  alert-sub-role-assignments.bicep  fleet.bicep  identity.bicep  inspektor-gadget.bicep  monitoring.bicep  network.bicep  redis.bicep
infra/modules/azmonitor/: aks-diagnostics.bicep  container-insights.bicep  core.bicep  external-sli-publisher-rbac.bicep  otlp-dcra.bicep  service-group-members.bicep  service-group.bicep  sli-definitions.bicep  sli-identity.bicep  sli-managed-dcr-rbac.bicep  sli-metric-alerts.bicep  sli-rbac.bicep
infra/modules/chaos/: experiments.bicep  role-assignments.bicep
infra/modules/functions/: external-sli-publisher.bicep
infra/modules/prometheus/: alert-rules.bicep  external-sli-publisher-alerts.bicep  pipeline.bicep  recording-rules.bicep  workspace.bicep
infra/modules/templates/: aks-autoupgrade.kql  aks-nodeos-autoupgrade.kql  pending-approval-gate.kql
infra/sli/: main.bicep  main.parameters.json
k8s/apps/chaos-app/: ciliumnetworkpolicy-egress-allowlist.yaml  gateway.yaml  httproute.yaml  instrumentation.yaml  kustomization.yaml
k8s/base/: addon-vpa.yaml  ciliumnetworkpolicy-egress-allowlist.yaml  ciliumnetworkpolicy-ingress-l7.yaml  cronjob-synthetic-traffic.yaml  deployment.yaml  gateway-options-configmap.yaml  gateway.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  networkpolicy.yaml  nginx-ingress-controller.yaml  pdb.yaml  service.yaml  serviceaccount.yaml
k8s/chaos/: README.md  namespace.yaml
k8s/components/cilium-ingress-l7/: kustomization.yaml  policy.yaml
k8s/observability/: ama-metrics-prometheus-config.yaml  ama-metrics-settings-configmap.yaml  container-azm-ms-agentconfig.yaml  container-network-log.yaml  kustomization.yaml
scripts/: check-api-otel-injection.py  cleanup-azure-monitor-sli-resources.py  cleanup-azure-monitor-sli-resources.sh  cleanup-legacy-sli-sources.py  tasks.py  wait-for-aks-readiness.py  wait-for-external-sli-signals.py  warm-up-sli-signals.py  warm-up-sli-signals.sh
specs/001-speckit-migration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-speckit-migration/checklists/: requirements.md
specs/002-uv-consolidation/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-uv-consolidation/checklists/: requirements.md
specs/003-platform-integration-test/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mypy-to-pyright/: plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: Dockerfile  Makefile  pyproject.toml  requirements.txt
src/api/: .dockerignore  Dockerfile  pyproject.toml
src/api/app/: config.py
src/api/tests/integration/: test_platform.py
src/api/tests/load/: README.md
src/api/tests/unit/: test_active_requests_middleware.py  test_azd_env.py  test_exception_handler.py  test_redis_client.py  test_redis_root.py  test_telemetry.py  test_telemetry_disabled.py
src/app/: __init__.py  azd_env.py  config.py  main.py  metrics.py  models.py  redis_client.py  telemetry.py
src/external-sli-publisher/: .funcignore  function_app.py  host.json  pyproject.toml  requirements.txt
src/external-sli-publisher/external_sli_publisher/: __init__.py  publisher.py
src/external-sli-publisher/tests/unit/: test_publisher.py
src/tests/: conftest.py
src/tests/integration/: test_basic_api.py  test_platform.py
src/tests/load/: README.md  locustfile.py  run-load-tests.sh
src/tests/unit/: test_active_requests_middleware.py  test_azd_env.py  test_health_cache.py  test_main.py  test_metrics.py  test_redis_client.py  test_redis_root.py  test_telemetry.py  test_telemetry_disabled.py
(+12 files in other folders)
