[project]
name = "aks-chaos-lab"
version = "0.1.0"
description = "AKS Chaos Lab demo app (FastAPI + Redis + OpenTelemetry)"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.133.1",
  "uvicorn>=0.41.0",
  "redis>=7.2.1",
  "azure-identity>=1.24.0",
  "redis-entraid>=1.1.0",
  "aiohttp>=3.13.3",
  "azure-monitor-opentelemetry>=1.8.6",
  "opentelemetry-instrumentation-redis>=0.60b0",
  "opentelemetry-instrumentation-logging>=0.60b0",
  "opentelemetry-instrumentation-fastapi>=0.60b0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "starlette>=0.52.1",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "pytest-env>=1.5.0",
  "ruff>=0.15.2",
  "ty>=0.0.18",
  "locust>=2.43.3",
  "freezegun>=1.5.5",
  "httpx>=0.28.1",
  "requests>=2.32.5",
  "types-requests>=2.32.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501", "S101"]                                                       # E501: line too long, S101: use of assert in tests

[tool.ruff.lint.per-file-ignores]
# FastAPI Depends() in function defaults is the official pattern
"app/main.py" = ["B008"]
# Test files can use more relaxed security rules
"tests/**/*.py" = [
  "S311",   # random usage OK in tests
  "S105",   # hardcoded passwords OK in test mocks
  "S106",   # hardcoded password args OK in test functions
  "S603",   # subprocess calls OK in test helpers
  "S607",   # partial paths OK in test helpers
  "T201",   # print statements OK in load test output
  "E722",   # bare except OK in test resilience scenarios
  "S110",   # try-except-pass OK in test scenarios
  "SIM117", # multiple with statements OK in tests
]

[tool.ty.environment]
python-version = "3.13"

[tool.ty.rules]
# Detect unused type: ignore / ty: ignore comments
unused-type-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = ["e2e: marks tests as end-to-end tests"]
env = [
  "TELEMETRY_ENABLED=false",
  "APPLICATIONINSIGHTS_CONNECTION_STRING=",
  "REDIS_ENABLED=false",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]

[tool.uv]
required-version = ">=0.10.6"
