[project]
name = "aks-chaos-lab-api"
version = "0.1.0"
description = "AKS Chaos Lab demo app (FastAPI + Redis + OpenTelemetry)"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.133.1",
  "uvicorn[standard]>=0.41.0",
  "redis>=7.2.1",
  "azure-identity>=1.24.0",
  "redis-entraid>=1.1.0",
  "aiohttp>=3.13.3",
  # OTel SDK / exporter / instrumentation are version-pinned to mitigate the silent-failure
  # risk documented in ADR-006 ("成熟度の前提とリスク"): the Python OTel Logs SDK is in the
  # "Development" maturity tier and the `opentelemetry.sdk._logs` namespace remains internal,
  # so upstream breaking changes (e.g. the 2025-11 LogData removal, the 2026-03 SDK
  # LoggingHandler deprecation) have caused production silent failures in
  # azure-monitor-opentelemetry-exporter (Azure issue #44237). Floors are raised to the
  # currently-locked versions known to work with the contrib LoggingHandler import path
  # used in src/api/app/telemetry.py; upper bounds prevent automated major bumps. OTel-related
  # dependency upgrades (including pre-1.0 minor/beta bumps) require manual review.
  "opentelemetry-sdk>=1.41.0,<2.0.0",
  "opentelemetry-exporter-otlp-proto-http>=1.41.0,<2.0.0",
  "opentelemetry-instrumentation-redis>=0.62b0,<1.0.0",
  "opentelemetry-instrumentation-logging>=0.62b0,<1.0.0",
  "opentelemetry-instrumentation-fastapi>=0.62b0,<1.0.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.13.1",
  "starlette>=0.52.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = ["e2e: marks tests as end-to-end tests"]
env = [
  "TELEMETRY_ENABLED=false",
  "REDIS_ENABLED=false",
]

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
]
