[project]
name = "external-sli-publisher"
version = "0.1.0"
description = "Azure Functions publisher for external Azure Monitor SLI signals"
requires-python = ">=3.14"
dependencies = [
  "azure-functions>=2.1.0",
  "azure-identity>=1.24.0",
  "azure-monitor-opentelemetry>=1.8.2",
  "azure-storage-blob>=12.29.0",
  "cramjam>=2.11.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.3",
  "ruff>=0.15.2",
  "ty>=0.0.19",
]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ASYNC", "S", "B", "A", "C4", "T20", "SIM"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
# Publisher calls fixed Azure Monitor endpoints supplied by infrastructure.
"external_sli_publisher/publisher.py" = ["S310"]
# Test files can use more relaxed security rules.
"tests/**/*.py" = [
  "S105",
  "S106",
  "S311",
  "S603",
  "S607",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.rules]
unused-type-ignore-comment = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv]
required-version = ">=0.10.6"
