[project]
name = "external-sli-publisher"
version = "0.1.0"
description = "Azure Functions publisher for external Azure Monitor SLI signals"
requires-python = ">=3.14"
dependencies = [
  "azure-functions>=2.1.0",
  "azure-identity>=1.24.0",
  "azure-monitor-opentelemetry>=1.8.2",
  "azure-storage-blob>=12.29.0",
  "cramjam>=2.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.uv]
package = false
